--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <title>PaddleBall Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
   </head>
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
