--- a/game.html
+++ b/game.html
@@ -5,10 +5,15 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <title>PaddleBall Game</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
+    
   </head>
   <body>
+    <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+  </div>
+    <div class="testing"></div>
     <script src="js.js"></script>
   </body>
 </html>
