renamed files, and copied paddle-ball game code to racing-game

--- a/paddle-ball.html
+++ b/paddle-ball.html
@@ -12,8 +12,7 @@
   <body>
     <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-  </div>
-    <div class="testing"></div>
-    <script src="js.js"></script>
+    </div>    
+    <script src="paddle-ball.js"></script>
   </body>
 </html>
