--- a/racing-game.html
+++ b/racing-game.html
@@ -13,6 +13,7 @@
     <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>    
-    <script src="racing-game.js"></script>
+    <script src="js/GraphicsCommon.js"></script>
+    <script src="js/racing-game.js"></script>
   </body>
 </html>
