--- a/racing-game.html
+++ b/racing-game.html
@@ -14,6 +14,9 @@
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>    
     <script src="js/GraphicsCommon.js"></script>
+    <script src="js/car.js"></script>
+    <script src="js/track.js"></script>
+    <script src="js/input.js"></script>
     <script src="js/racing-game.js"></script>
   </body>
 </html>
