--- a/paddle-ball.html
+++ b/paddle-ball.html
@@ -12,6 +12,7 @@
   <body>
     <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+      <p>Use mouse to control paddle</p>
     </div>    
     <script src="paddle-ball.js"></script>
   </body>
