--- a/paddle-ball.html
+++ b/paddle-ball.html
@@ -12,9 +12,10 @@
   <body>
     <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-      <br>
+    </div>
+    <div>
       <p>Use mouse to control paddle</p>
-    </div>    
+    </div>
     <script src="paddle-ball.js"></script>
   </body>
 </html>
