--- a/paddle-ball.html
+++ b/paddle-ball.html
@@ -15,7 +15,7 @@
     </div>
     <div>
       <p>Use mouse to control paddle</p>
-    </div>
+    </div class="controls">
     <script src="paddle-ball.js"></script>
   </body>
 </html>
