--- a/paddle-ball.html
+++ b/paddle-ball.html
@@ -13,9 +13,9 @@
     <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
-    <div>
+    <div class="controls">
       <p>Use mouse to control paddle</p>
-    </div class="controls">
+    </div>
     <script src="paddle-ball.js"></script>
   </body>
 </html>
