--- a/paddle-ball.html
+++ b/paddle-ball.html
@@ -13,7 +13,7 @@
     <div class="gameDiv" width ="800" height="600">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
-    <div class="controls">
+    <div class="control">
       <p>Use mouse to control paddle</p>
     </div>
     <script src="paddle-ball.js"></script>
